Fix search icon on small screens

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/components/_action-bar.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/components/_action-bar.scss
@@ -43,7 +43,6 @@
 
             .has-filter .form-control-feedback {
                 left: 3.75rem;
-                top: 0.1rem;
             }
 
             [dir="rtl"] .has-filter .form-control-feedback {
